--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "dev": "mocha watch"
   },
   "repository": "",
-  "dependencies": {
-    "underscore": "~1.4.2"
-  },
+  "dependencies": {},
   "devDependencies": {
     "mocha": "~1.6.0",
     "expect.js": "~0.2.0"
